syntax = "proto3";

option csharp_namespace = "MagicMirrorWorker.Protos";

package Weather;

import "google/protobuf/empty.proto";

service Weather {
  rpc GetWeatherStream(google.protobuf.Empty) returns (stream WeatherResponse);
  rpc GetWeather(google.protobuf.Empty) returns (WeatherResponse);
}

message WeatherResponse  {
  repeated WeatherCurrentModel currentWeathers = 1;
  repeated WeatherForecast forecastWeathers = 2;
}

message WeatherCurrentModel {
  string city = 1;
  float temp = 2;
  float temp_min = 3;
  float temp_max = 4;
  int32 humidity = 5;
  string description = 6;
  Wind wind = 7;
  int32 weather_id = 8;
  string main = 9;
  string icon = 10;
  int64 sunrise = 11;
  int64 sunset = 12;
}

message Wind {
  float speed = 1;
  int32 deg = 2;
}

message WeatherForecast {
  City city = 1;
  repeated Forecast Forecasts = 2;
}

message City {
  string name = 1;
  int64 sunrise = 2;
  int64 sunset = 3;
}

message Forecast {
  Wind wind = 1;
  int32 weather_id = 2;
  string main = 3;
  string icon = 4;
  string description = 5;
  float temp = 6;
  float temp_min = 7;
  float temp_max = 8;
  int32 humidity = 9;
}